allocator_tests = executable(
  'allocator_tests',
  'allocator_tests.cpp',
  include_directories: [public_headers],
  link_with: mu_lib,
)
test('Allocator Tests', allocator_tests)

# unique_ptr_tests = executable(
#   'unique_ptr_tests',
#   'unique_ptr_tests.cpp',
#   include_directories: [public_headers],
#   link_with: mu_lib,
# )
# test('UniquePtr Tests', unique_ptr_tests)
